--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,3 +6,19 @@ body{
 	font-family:arial;
 	background-color: grey;
 }
+
+#main
+{
+	background-color: grey;
+	margin-left: 130px;
+	
+}
+/* Header 3*/
+#main > h3
+{
+  font-size: 32px;
+  color: black;
+  padding-left: 5px;
+  background-color: grey;
+  
+}
