--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 /* Everything inside body follows these rules:*/
 body{
 	font-family:arial;
-	background-color: grey;
+	background-color: white;
 }
 
 #main
