--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,15 +10,16 @@ body{
 #main
 {
 	background-color: grey;
-	margin-left: 130px;
+	margin-left: 10px;
 	
 }
 /* Header 3*/
 #main > h3
 {
-  font-size: 32px;
+  font-size: 50px;
+margin-left: 100px;
   color: black;
   padding-left: 5px;
-  background-color: grey;
+  background-color: white;
   
 }
