--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,7 +43,7 @@ button:hover {
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
+.cancelbtn, .createbtn {
   float: left;
   width: 50%;
 }
@@ -62,7 +62,7 @@ button:hover {
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+  .cancelbtn, .createbtn {
     width: 100%;
   }
 }
