--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,13 +37,13 @@ button:hover {
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
+.updatebtn {
   padding: 14px 20px;
-  background-color: #f44336;
+  background-color: #ffff00;
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .createbtn {
+.cancelbtn, .updatebtn {
   float: left;
   width: 50%;
 }
@@ -62,7 +62,7 @@ button:hover {
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .createbtn {
+  .updatebtn, .createbtn {
     width: 100%;
   }
 }
