--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,7 @@ button:hover {
 /* Extra styles for the cancel button */
 .updatebtn {
   padding: 14px 20px;
-  background-color: #ffff00;
+  background-color: #ABAF4C;
 }
 
 /* Float cancel and signup buttons and add an equal width */
