--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,20 @@ button:hover {
   background-color: #474e5d;
   padding-top: 50px;
 }
+/* The Modal2 (background) */
+.modal2 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
 
 /* Modal Content/Box */
 .modal-content {
@@ -74,6 +88,15 @@ button:hover {
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
+/* Modal2 Content/Box */
+.modal2-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
 
 
 
