--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,8 +53,21 @@ button:hover {
   padding: 16px;
 }
 
-/* The Modal (background) */
-.modal {
+/* The Client(background) */
+.client{
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+/* The Provider(background) */
+.provider{
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -67,9 +80,16 @@ button:hover {
   padding-top: 50px;
 }
 
+/* Client Content/Box */
+.client-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
 
-/* Modal Content/Box */
-.modal-content {
+/* Provider Content/Box */
+.provider-content {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
