--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,7 +54,7 @@ button:hover {
 }
 
 /* The Client(background) */
-.client{
+.modal{
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -81,7 +81,7 @@ button:hover {
 }
 
 /* Client Content/Box */
-.client-content {
+.modal-content {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
