--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,13 +58,19 @@ button {
 .container {
 	padding: 16px;
 }
-/* The Meny(background) */
+/* The Meny */
 .meny {
-	margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-	border: 1px solid #888;
-	width: 50%; /* Could be more or less, depending on screen size */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: #474e5d;
+	padding-top: 50px;
 }
-	/* The Client(background) */
+	/* The Modal(background) */
 	.modal {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
@@ -78,7 +84,7 @@ button {
 	padding-top: 50px;
 }
 
-/* Client Content/Box */
+/* Modal Content/Box */
 .modal-content {
 	background-color: #fefefe;
 	margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
