--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,17 +61,24 @@ button {
 /* The Meny */
 .meny {
 	width: 100%;
-	background-color: #555;
+	background-color: #1abc9c;
 	overflow: auto;
 }
 
 	.meny button {
+		background-color: #4CAF50;
+		color: white;
+		border: none;
+		cursor: pointer;
+		width: 100%;
+		opacity: 0.9;
+
 		float: left;
 		padding: 12px;
 		color: white;
 		text-decoration: none;
 		font-size: 17px;
-		width: 25%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+		width: 50%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
 		text-align: center; /* If you want the text to be centered */
 	}
 		/* Add a background color on mouse-over */
