--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,14 +66,14 @@ button {
 }
 
 	.meny button {
-		background-color: #4CAF50;
+		background-color: #555;
+		color: white;
+		padding: 14px 20px;
+		margin: 0px 0;
 		border: none;
 		cursor: pointer;
 		opacity: 0.9;
-
 		float: left;
-		padding: 12px;
-		color: white;
 		text-decoration: none;
 		font-size: 17px;
 		width: 50%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
