--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,7 @@ button {
 }
 
 	.meny button {
-		background-color: #555;
+		background-color: #1a8bbc;
 		color: white;
 		padding: 14px 20px;
 		margin: 0px 0;
