--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,38 +59,58 @@ button {
 .container {
 	padding: 16px;
 }
-/* The Meny */
-.meny {
+/* The Choice Menu */
+.choiceMenu {
 	width: 100%;
 	background-color: #555;
 	overflow: auto;
 }
 
-	.meny button {
+	.choiceMenu button {
 		background-color: #1a8bbc;
 		color: white;
 		padding: 14px 20px;
 		margin: 0px 0;
-		border: none;
+		border-top: 1px solid black;
 		cursor: pointer;
 		opacity: 0.9;
 		float: left;
 		text-decoration: none;
 		font-size: 17px;
-		width: 50%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+		width: 100%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
 		text-align: center; /* If you want the text to be centered */
 	}
 		/* Add a background color on mouse-over */
-		.meny button:hover {
+		.choiceMenu button:hover {
 			opacity: 1;
 		}
+/* div for all content on page inside body*/
+#page-container {
+	position: relative;
+	min-height: 100vh;
+}
+/* All content except footer */
+#content-wrap {
+	padding-bottom: 4rem; /* Footer height */
+}
 
-.header {
+#header {
 	padding: 60px;
 	text-align: center;
 	background: #1abc9c;
 	color: white;
 	font-size: 30px;
+}
+
+#footer {
+	padding: 5px;
+	text-align: right;
+	background: #117964;
+	color: white;
+	font-size: 15px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 /* The Modal(background) */
 .modal {
@@ -143,6 +163,7 @@ button {
 	.updatebtn, .createbtn {
 		width: 100%;
 	}
+
 	.meny button {
 		float: none;
 		display: block;
@@ -150,3 +171,10 @@ button {
 		text-align: left; /* If you want the text to be left-aligned on small screens */
 	}
 }
+
+	@media screen and (max-height: 550px) {
+		#footer{
+			display: none;
+		}
+	}
+
